# rust_raytracer

./: Cargo.toml  README.md  rust_raytracer.rar  rustfmt.toml
src/: camera.rs  canvas.rs  hitrecord.rs  main.rs  material.rs  ray.rs  renderer.rs
src/lights/: directional_light.rs  light_manager.rs  light_properties.rs  mod.rs  point_light.rs
src/materials/: lambert_material.rs  lambert_phong_material.rs  material_definitions.rs  material_manager.rs  material_properties.rs  mod.rs  phong_brdf_material.rs
src/math/: brdf.rs  evector.rs  mod.rs
src/objects/: mod.rs  object_properties.rs  plane.rs  sphere.rs  triangle.rs  triangle_mesh.rs
src/world/: mod.rs  scene_manager.rs  scenegraph.rs  world_creation.rs
