[package]
name = "rust_raytracer"
version = "0.1.0"
edition = "2021"

description = "rust raytracer - for practicing rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/Indra-db/rust_raytracer"
readme = "README.md"
keywords = ["raytracing", "graphics", "rust"]
categories = ["graphics"]

[dependencies]
glam = "0.24.1"
num-traits = "0.2.16"
sdl2 = "0.35.2"
regex = "1.9.4"
rayon = "1.7.0"
